Final changes to finish Thought type
Finsihed thought type and app will run

--- a/Tasks/Views/Shared/_Menu.cshtml
+++ b/Tasks/Views/Shared/_Menu.cshtml
@@ -1,26 +1,30 @@
 ﻿<nav id="sidebar">
-
-
+    
     <ul class="list-unstyled components">
+        <li>
+            <a href="#">
+                Plan
+            </a>
+        </li>
         <li class="active">
             <a id="#btn-menu-thoughts" data-toggle="collapse" aria-expanded="false">
-                <i><img src="~/Images/Icons/S/idea.png" /></i>
+                <i><img src="~/Images/Icons/S/idea.png"/></i>
                 Thoughts
             </a>
         </li>
         <li>
             <a href="#">
-                <i><img src="~/Images/Icons/S/clipboard.png" /></i>
+                <i><img src="~/Images/Icons/S/clipboard.png"/></i>
                 Tasks
             </a>
             <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
-                <i><img src="~/Images/Icons/S/loop.png" /></i>
+                <i><img src="~/Images/Icons/S/loop.png"/></i>
                 Habits
             </a>
         </li>
         <li>
             <a href="#">
-                <i><img src="~/Images/Icons/S/cup.png" /></i>
+                <i><img src="~/Images/Icons/S/cup.png"/></i>
                 Goals
             </a>
         </li>
@@ -30,9 +34,20 @@
                 Schedule
             </a>
         </li>
+
         <li>
             <a href="#">
-                <i><img src="~/Images/Icons/S/hourglass.png" /></i>
+                Do
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                Review
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <i><img src="~/Images/Icons/S/hourglass.png"/></i>
                 History
             </a>
             <ul class="collapse list-unstyled" id="pageSubmenu">
@@ -43,4 +58,3 @@
         </li>
     </ul>
 </nav>
-
