First commit to Task branch
Changed database, built entity and service

--- a/Tasks/Views/Shared/_Menu.cshtml
+++ b/Tasks/Views/Shared/_Menu.cshtml
@@ -15,8 +15,10 @@
         <li>
             <a href="#">
                 <i><img src="~/Images/Icons/S/clipboard.png"/></i>
-                Tasks
+                @Html.ActionLink("Thoughts","Index","Tasks")
             </a>
+        </li>
+        <li>
             <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
                 <i><img src="~/Images/Icons/S/loop.png"/></i>
                 Habits
