--- a/Tasks/Views/Tasks/_TasksTable.cshtml
+++ b/Tasks/Views/Tasks/_TasksTable.cshtml
@@ -6,23 +6,26 @@
         <div class="panel-body">
 
             <table class="table table-striped table-hover ">
+                <tr>
+                    <th>@Model.TaskList.FirstOrDefault().Id.ToString()</th>
+                    <th>@Model.TaskList.FirstOrDefault().Description</th>
+                    <th>@Model.TaskList.FirstOrDefault().Due.Date.ToString()</th>
+                    <th>@Model.TaskList.FirstOrDefault().Due.WeekCommencing.ToString()</th>
+                    <th>@Model.TaskList.FirstOrDefault().Due.Month.ToString()</th>
+                    <th>@Model.TaskList.FirstOrDefault().Due.Year.ToString()</th>
+                </tr>
                 <tbody id="thoughtResultsTableBody">
                 @foreach (TaskDto task in Model.TaskList)
                 {
-                    <tr data-thoughtid ="@task.Id">
-                        <td class="col-xs-9">@task.Description</td>
-                        <td class="col-xs-3">
-                            @task.DateCreated.ToString("ddd dd MMM")
-                            <span>
-                                <button type="button" class ="close" aria-hidden="true" id="btnFunnel"><img src="~/Images/funnel.png"/></button>
-                            </span>
-                            <span>
-                                <button type="button" class="close" aria-hidden="true" id="btnClose">&times;</button>
-                            </span>
-                        </td>
+                    <tr data-thoughtid="@task.Id">
+                        <td>@task.Id</td>
+                        <td>@task.Description</td>
+                        <td>@task.Due.Date.ToString()</td>
+                        <td>@task.Due.WeekCommencing.ToString()</td>
+                        <td>@task.Due.Month.ToString()</td>
+                        <td>@task.Due.Year.ToString()</td>
                     </tr>
                 }
-
                 </tbody>
             </table>
 
