--- a/Tasks/Views/Tasks/_TasksTable.cshtml
+++ b/Tasks/Views/Tasks/_TasksTable.cshtml
@@ -6,24 +6,14 @@
         <div class="panel-body">
 
             <table class="table table-striped table-hover ">
-                <tr>
-                    <th>@Model.TaskList.FirstOrDefault().Id.ToString()</th>
-                    <th>@Model.TaskList.FirstOrDefault().Description</th>
-                    <th>@Model.TaskList.FirstOrDefault().Due.Date.ToString()</th>
-                    <th>@Model.TaskList.FirstOrDefault().Due.WeekCommencing.ToString()</th>
-                    <th>@Model.TaskList.FirstOrDefault().Due.Month.ToString()</th>
-                    <th>@Model.TaskList.FirstOrDefault().Due.Year.ToString()</th>
-                </tr>
                 <tbody id="thoughtResultsTableBody">
                 @foreach (TaskDto task in Model.TaskList)
                 {
                     <tr data-thoughtid="@task.Id">
                         <td>@task.Id</td>
                         <td>@task.Description</td>
-                        <td>@task.Due.Date.ToString()</td>
-                        <td>@task.Due.WeekCommencing.ToString()</td>
-                        <td>@task.Due.Month.ToString()</td>
-                        <td>@task.Due.Year.ToString()</td>
+                        <td>@task.TimeFrame.Window</td>
+                        <td>@task.TimeFrame.Due</td>
                     </tr>
                 }
                 </tbody>
