--- a/Tasks/Views/Tasks/Index.cshtml
+++ b/Tasks/Views/Tasks/Index.cshtml
@@ -8,4 +8,13 @@
 <!--  -->
 <h1>@ViewBag.Heading</h1>
 
-@Html.Partial("_TasksTable",Model)
+<div class="input-group-btn">
+    <button id="btnAddTask" type="submit" value="Create" class="btn btn-default">New Task</button>
+</div>
+
+<div id="addTaskContainer">
+</div>
+
+<div id="taskResultsTable">
+    @Html.Partial("_TasksTable", Model)
+</div>
