Finished off basic functionality of Tasks
Finsihed basic functionality of Tasks. Left to do is the UI

--- a/Tasks/Views/Tasks/Index.cshtml
+++ b/Tasks/Views/Tasks/Index.cshtml
@@ -9,7 +9,7 @@
 <h1>@ViewBag.Heading</h1>
 
 <div class="input-group-btn">
-    <button id="btnAddTask" type="submit" value="Create" class="btn btn-default">New Task</button>
+    <button id="btnShowAddTask" type="submit" value="Create" class="btn btn-default">New Task</button>
 </div>
 
 <div id="addTaskContainer">
