--- a/Tasks/Views/Thoughts/_AddThought.cshtml
+++ b/Tasks/Views/Thoughts/_AddThought.cshtml
@@ -13,7 +13,7 @@
                 @Html.AntiForgeryToken()
                 <div class="form-group">
                     
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label"})
+                    @Html.LabelFor(model => model.Description, new { @class = "control-label"})
                 
                     <div class="input-group">
                         @Html.TextBoxFor(model => model.Description, new { @class = "form-control", PlaceHolder = "Add a thought here"})
