Projects now working
Projects working, also added references to split.js

--- a/Tasks/Views/Shared/_Menu.cshtml
+++ b/Tasks/Views/Shared/_Menu.cshtml
@@ -33,7 +33,7 @@
         <li>
             <a href="#">
                 <i><img src="~/Images/Icons/S/cup.png"/></i>
-                Goals
+                Projects
             </a>
         </li>
         <li>
