--- a/Tasks/CSS/Global/global.css
+++ b/Tasks/CSS/Global/global.css
@@ -1,37 +1,4 @@
 ﻿
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-@import url('https://fonts.googleapis.com/css?family=Pacifico|Rubik');
-
-body {
-    font-family: 'Rubik', sans-serif;
-    background: #F4F5F2;
-    color: #404040
-}
-
-a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-.brand {
-    font-family: 'Pacifico', cursive;
-    font-size: 2.5em;
-    cursor: pointer;
-}
-
-    .brand:hover {
-        color: #F17259; 
-    }
-
-.btn {
-    background: #f17259;
-}
-
-    .btn:hover {
-        background: #A2D897;
-    }
-
 /*Toggle Buttons*/
 
 
@@ -133,23 +100,35 @@ a, a:hover, a:focus {
 }
 
 /*Horizontal Scrolling box for weekplan*/
-.plan-container{
-    display:flex;
+.debug {
     border: 3px solid blue;
-    height: 80%;
-    width: 80%;
+    padding: 10px;
+}
+.plan-container{
+    display:flex; 
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
 }
 
-.plan-item {
-    border: 2px solid red;
-    display: flex;    
+.plan-pane-left {
     flex-grow: 1;
-    justify-content: space-around;
-    min-width:200px;
 }
-.plan-week {
-    overflow-x: scroll;     
+
+.plan-pane-middle {
+    display: flex;
+    flex-grow: 3;
+    overflow-x: scroll;
 }
-.plan-panel{
-    min-width: 300px;    
+
+.plan-pane-middle-day{
+
 }
+
+.plan-pane-right {
+    flex-grow: 1;
+}
+
+
+
+
