--- a/Tasks/Views/PlanWeek/_WeekPlanTable.cshtml
+++ b/Tasks/Views/PlanWeek/_WeekPlanTable.cshtml
@@ -2,27 +2,24 @@
 @using Tasks.ViewModels.PlanWeek
 @model PlanWeekViewModel
 
-
+<!--Days-->
 @foreach (DayPlanDto day in Model.weekPlanDto.DayPlans)
-{   
-    <div class="panel plan-panel">
-        <div class="panel-body">
+{
+<div class="plan-pane-middle-day">
+    <table class="table table-striped table-hover ">
+        <tbody>
 
-            <table class="table table-striped table-hover ">
-                <tbody>
+            @foreach (DayPlanItemDto item in day.Items)
+            {
+                <tr data-taskid="@item.Id">
+                    <td> @item.Id </td>
+                    <td> @item.Description </td>
+                    <td> @item.Type </td>
+                </tr>
+            }
 
-                    @foreach (DayPlanItemDto item in day.Items)
-                    {
-                        <tr data-taskid="@item.Id">
-                            <td> @item.Id </td>
-                            <td> @item.Description </td>
-                            <td> @item.Type </td>
-                        </tr>
-                    }
-
-                </tbody>
-            </table>
-
-        </div>
-    </div>        
+        </tbody>
+    </table>
+</div>
 }
+
