--- a/Tasks/Views/Shared/_Layout.cshtml
+++ b/Tasks/Views/Shared/_Layout.cshtml
@@ -2,30 +2,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <title>@ViewBag.Title Task Tunnel</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Copse|Scope+One|Spectral+SC" rel="stylesheet">
     @Styles.Render("~/Content/css")
+    @Html.ViewStylesheetResource()
 </head>
 <body>
 
-@Html.Partial("_Header")
+    <div id="body-grid">
 
-<div class="wrapper">
-    
-    <!-- Sidebar -->
-    @Html.Partial("_Menu")
-    
-    <!-- Page Content -->
-    <div id="content">
-        @RenderBody()
+        <header>
+            <div class="header-container">
+                <div class="header-section-left">
+                    <img id="nav-arrow" src="~/Images/SVG/leftArrow.svg" />
+                </div>
+                <div class="header-section-center">
+                    <h1 class="logo">Thought Stream</h1>
+                </div>
+                <div class="header-section-right">
+                    <img id="aside-arrow" src="~/Images/SVG/rightArrow.svg" />
+                </div>
+            </div>
+        </header>
+        
+        <nav>
+
+            <div class="nav-container">
+                <div class="nav-content">
+                    @Html.Partial("_Menu")
+                </div>
+                <div class="nav-tabs">
+                    <ul>
+                        <li><div class="rotate">opt6</div></li>
+                        <li><div class="rotate">opt5</div></li>
+                        <li><div class="rotate">opt4</div></li>
+                        <li><div class="rotate">opt3</div></li>
+                        <li><div class="rotate">opt2</div></li>
+                        <li><div class="rotate">opt1</div></li>
+                    </ul>
+                </div>
+            </div>            
+
+        </nav>
+
+        <article>
+            <div id="content" class="article-container">
+                @RenderBody()
+            </div>
+        </article>
+
+        <aside>
+
+            <div class="aside-container">
+
+                <div class="aside-tabs">
+                    <ul>
+                        <li><div class="rotate">tab6</div></li>
+                        <li><div class="rotate">tab5</div></li>
+                        <li><div class="rotate">tab4</div></li>
+                        <li><div class="rotate">tab3</div></li>
+                        <li><div class="rotate">tab2</div></li>
+                        <li class="active"><div class="rotate">tab1</div></li>
+                    </ul>
+                </div>
+
+                <div class="aside-content">
+                    <h2>Tool bar</h2>
+                    <p>
+                        This is where the tools will be kept.
+                        You can drag from here and place in centre
+                    </p>
+                </div>
+
+            </div>
+
+        </aside>
+        
+        <footer>
+            <div class="footer-content">
+                <hr id="hr-footer" />
+                <p>
+                    Developed by Dale Morgan
+                </p>
+            </div>
+        </footer>
+
     </div>
 
-</div>
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@Scripts.Render("~/bundles/core")
-@Html.ViewJavascriptResource()
-@RenderSection("scripts", false)
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/core")
+    @Html.ViewJavascriptResource()
+    @RenderSection("scripts", false)
 </body>
 </html>
