--- a/Tasks/Views/Thoughts/_AddThought.cshtml
+++ b/Tasks/Views/Thoughts/_AddThought.cshtml
@@ -2,31 +2,23 @@
 @model Tasks.ViewModels.Thoughts.AddThoughtViewModel
 
 
-<div class="container-fluid">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            
-            <h4>Add a thought</h4>
+<div class="card">
 
-            @using (Html.BeginForm("Create", "Thoughts", FormMethod.Post, new {id = "addThoughtForm" }))
-            {
-                @Html.AntiForgeryToken()
-                <div class="form-group">
-                    
-                    @Html.LabelFor(model => model.Description, new { @class = "control-label"})
-                
-                    <div class="input-group">
-                        @Html.TextBoxFor(model => model.Description, new { @class = "form-control", PlaceHolder = "Add a thought here"})
-                        <span class="input-group-btn">
-                            <button id="btnAddThought" type="submit" value="Create" class="btn btn-default">Spill</button>
-                        </span>
-                    </div>
+    @using (Html.BeginForm("Create", "Thoughts", FormMethod.Post, new {id = "addThoughtForm" }))
+    {
+        @Html.AntiForgeryToken()
+
+            <div class="input-container">
+
+                <div class="input-item textbox">
+                    @Html.TextBoxFor(model => model.Description, new { @class = "textbox", PlaceHolder = "What's on your mind?..." })
                 </div>
-            }
-        </div>
-    </div>
+
+                <div class="input-item button">
+                    <button id="btnAddThought" type="submit" value="Create">Add</button>
+                </div>
+
+            </div>        
+    }
 </div>
-
-
-
-            
+    
