--- a/Tasks/Views/Thoughts/_ThoughtsTable.cshtml
+++ b/Tasks/Views/Thoughts/_ThoughtsTable.cshtml
@@ -2,29 +2,28 @@
 @using Tasks.ViewModels.Thoughts
 @model ThoughtsViewModel
 
-<div class="container-fluid">
-    <div class="panel panel-default">
-        <div class="panel-body">
+<div class="card">
+    
+    <table class="table table-striped table-hover ">
+        <tbody id="thoughtResultsTableBody">
+            @foreach (ThoughtDto thought in Model.ThoughtList.OrderBy(x => x.SortId))
+            {
+                <tr data-thoughtid ="@thought.Id" data-sortid ="@thought.SortId">
+                    <td class="col-xs-9">@thought.Description</td>
+                    <td class="col-xs-3">
+                        @thought.DateCreated.ToString("ddd dd MMM")
+                        <span>
+                            <button type="button" class ="close" aria-hidden="true" id="btnFunnel"><img src="~/Images/funnel.png"/></button>
+                        </span>
+                        <span>
+                            <button type="button" class="close" aria-hidden="true" id="btnClose">&times;</button>
+                        </span>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-            <table class="table table-striped table-hover ">
-                <tbody id="thoughtResultsTableBody">
-                    @foreach (ThoughtDto thought in Model.ThoughtList.OrderBy(x => x.SortId))
-                    {
-                        <tr data-thoughtid ="@thought.Id" data-sortid ="@thought.SortId">
-                            <td class="col-xs-9">@thought.Description</td>
-                            <td class="col-xs-3">
-                                @thought.DateCreated.ToString("ddd dd MMM")
-                                <span>
-                                    <button type="button" class ="close" aria-hidden="true" id="btnFunnel"><img src="~/Images/funnel.png"/></button>
-                                </span>
-                                <span>
-                                    <button type="button" class="close" aria-hidden="true" id="btnClose">&times;</button>
-                                </span>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
 </div>
+
+
