--- a/Tasks/CSS/Global/layout.css
+++ b/Tasks/CSS/Global/layout.css
@@ -128,6 +128,7 @@ article {
     grid-row: 2;
     /* Start on the second column line and stop at the third column line */
     grid-column: 2 / 3;
+    overflow: hidden;
 }
 
 /*Right sidebar*/
@@ -504,7 +505,6 @@ aside {
 */
 
 h1, img, .rotate {
-    user-drag: none;
     user-select: none;
     -moz-user-select: none;
     -webkit-user-drag: none;
