--- a/Tasks/Views/PlanWeek/_WeekPlanTable.cshtml
+++ b/Tasks/Views/PlanWeek/_WeekPlanTable.cshtml
@@ -1,25 +1,31 @@
 ﻿@using Tasks.Service.PlanWeek.Dto
 @using Tasks.ViewModels.PlanWeek
-@model PlanWeekViewModel
+@model Dictionary<DayOfWeek, ItemListDto> 
 
 <!--Days-->
-@foreach (DayPlanDto day in Model.weekPlanDto.DayPlans)
+@foreach (KeyValuePair<DayOfWeek, ItemListDto> day in Model)
 {
-<div class="plan-pane-middle-day">
-    <table class="table table-striped table-hover ">
-        <tbody>
-
-            @foreach (DayPlanItemDto item in day.Items)
-            {
-                <tr data-taskid="@item.Id">
-                    <td> @item.Id </td>
-                    <td> @item.Description </td>
-                    <td> @item.Type </td>
+    <div class="card">
+        <h1>@day.Key.ToString()</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Description</th>
+                    <th>Type</th>
                 </tr>
-            }
-
-        </tbody>
-    </table>
-</div>
+            </thead>
+            <tbody>
+                @foreach (ItemDto item in day.Value.ItemDtos)
+                {
+                    <tr data-taskid="@item.Id">
+                        <td> @item.Id </td>
+                        <td> @item.Description </td>
+                        <td> @item.Type </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 }
 
