--- a/Tasks/CSS/Controllers/PlanWeek.css
+++ b/Tasks/CSS/Controllers/PlanWeek.css
@@ -10,25 +10,31 @@
 #open-container {
     grid-column-start: open;
     grid-column-end: weekly;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
+    /*
     display: flex;
+    flex: 1 1 0;
     flex-direction: column;
     margin: 10px;
     min-width: 20%;
-    overflow-y: scroll;
+    
+    */
 }
 
-/*
+
 #week-container {
+    position: relative;
     width: 100%;
     height: 100%;
-    /*Grid item
+    /*Grid item*/
     margin: 10px;
     grid-column-start: weekly;
     grid-column-end: end;
-    /*Flex container
+    /*Flex container*/
     display: grid;
     display: flex;
     flex-direction: row;
@@ -36,5 +42,3 @@
     min-width: 30px;
     overflow-y: scroll;
 }
-
-*/
