--- a/Tasks/CSS/Controllers/PlanWeek.css
+++ b/Tasks/CSS/Controllers/PlanWeek.css
@@ -1,12 +1,12 @@
 ﻿#content {
     /*Grid*/
     display: grid;
-    grid-template-columns: [open] auto [separator] 10px [weekly] 85% [end];
+    grid-template-columns: [open] auto [separator] 10px [weekly] auto [end];
     grid-template-rows: 100%;
     grid-column-gap: 5px;
     width: 100%;
     height: 100%;
-    justify-items: stretch;
+    justify-content: start;
     overflow: hidden;
 }
 
@@ -15,34 +15,40 @@
     grid-column-start: open;
     grid-column-end: separator;
     min-width: 220px;
+    max-width: 400px;
     /*Grid container*/
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: [heading] 50px [plan] calc(100% - 50px) [end]; /*calc(100% - 50px)*/
     overflow: hidden;
     justify-items: stretch;
+    z-index: 20;
 }
 
     #open-container .heading {
         grid-area: heading/1/plan/1;
+        z-index: 21;
     }
     #open-container .plan {
         grid-area: plan/1/end/1;
         height: 100%;
-        width: 100%;
-
+        width: auto;
         display: flex;
         justify-items: stretch;
+        z-index: 22;
     }
         #open-container .plan .card {
             /*flex: 1 1 auto;*/
-            height: 98%;
+            height: 97%;
             width: 100%;
             margin: 10px;
-            padding: 5px;
+            z-index: 23;
         }
-    #open-container .plan .card .list{
-    }
+            #open-container .plan .card .list {
+                padding-left: 10px;
+                padding-bottom: 100px;
+                z-index: 24;
+            }
 
 #week-container {
     /*Grid item*/
@@ -55,37 +61,56 @@
     grid-template-rows: [heading] 50px [plan] auto [end];
     width: 100%;
     height: 100%;
-    justify-items: stretch;   
-
+    justify-items: stretch;
+    z-index: 20;
 }
     #week-container .heading {
-        grid-area: heading / 1 / plan / 1 
+        grid-area: heading/1/plan/1;
+        z-index: 21;
     }
     #week-container .plan {
-        /*Grid item*/
+        /*Grid item generals*/
         grid-row-start: plan;
         grid-row-end: end;
-        
+        overflow-y: scroll;
         /*Flex container*/
         display: flex;
-        flex: 1 1 auto;
         flex-direction: row;
+        /*Flex*/
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        -o-flex: 1 1 auto;
+        flex: 1 1 auto;
+        /*Flex wrap*/
+        -moz-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        -o-flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
         flex-wrap: wrap;
+        /*Justify content*/
+        -o-justify-content: flex-start;
+        -webkit-justify-content: flex-start;
         justify-content: flex-start;
+        -moz-align-content: flex-start;
+        -o-align-content: flex-start;
+        -webkit-align-content: flex-start;
         align-content: flex-start;
-        overflow-y: scroll;
-        
+        z-index: 22;
     }
+
         #week-container .plan .day {
+            /*Generals*/
             display: inline-block;
-            flex: 1 1 auto;
             flex-direction: column;
             width: auto;
             max-width: 30%;
             min-width: 170px;
             margin: 5px;
+            padding-left: 18px;
+            /*Flex*/
+            -webkit-flex: 1 1 auto;
+            -ms-flex: 1 1 auto;
+            -o-flex: 1 1 auto;
+            flex: 1 1 auto;
+            z-index: 24;
         }
-
-.separator {
-    
-}
