--- a/Tasks/Views/PlanWeek/_WeekItemsTable.cshtml
+++ b/Tasks/Views/PlanWeek/_WeekItemsTable.cshtml
@@ -19,7 +19,7 @@
                     <th>Type</th>
                 </tr>
                 </thead>
-                <tbody>
+                <tbody class="connectedSortable">
                 @foreach (ItemDto item in day.Value.ItemDtos)
                 {
                     <tr data-taskid="@item.Id">
