--- a/Tasks/CSS/Controllers/PlanWeek.css
+++ b/Tasks/CSS/Controllers/PlanWeek.css
@@ -106,7 +106,8 @@
             max-width: 30%;
             min-width: 170px;
             margin: 5px;
-            padding-left: 18px;
+            padding: 0;
+            padding-left: 8px;
             /*Flex*/
             -webkit-flex: 1 1 auto;
             -ms-flex: 1 1 auto;
@@ -114,6 +115,35 @@
             flex: 1 1 auto;
             z-index: 24;
         }
+            
+            #week-container .plan .day table {
+                width: 100%;
+                cursor: default;
+                }
+            #week-container .plan .day tr {
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+            #week-container .plan .day tr td {
+                text-align: left;
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+                #week-container .plan .day tr td:hover {
+                    /*Shadow card height*/
+                    -moz-box-shadow: var(--shadow-card);
+                    -webkit-box-shadow: var(--shadow-card);
+                    box-shadow: var(--shadow-card);
+                    /*Transition*/
+                    -moz-transition: all .05s ease-in;
+                    -o-transition: all .05s ease-in;
+                    -webkit-transition: all .05s ease-in;
+                    transition: all .05s ease-in;
+                }
+            #week-container .plan .day tr td input {
+                float: right;
+                width: 20px;
+            }
 
 .placeholder {
     height: 20px;
@@ -123,5 +153,4 @@
 
 .emptyTablePlaceholder {
     height: 5px;
-    
 }
