--- a/Tasks/Views/PlanWeek/_OpenItemsTable.cshtml
+++ b/Tasks/Views/PlanWeek/_OpenItemsTable.cshtml
@@ -15,23 +15,19 @@
                 <div>
                     <h1>@day.Key.ToString()</h1>
                     <table>
-                        <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Description</th>
-                            <th>Type</th>
-                        </tr>
-                        </thead>
                         <tbody id=@day.Key class="connectedSortable">
+                        
                             <tr class="emptyTablePlaceholder"></tr>
-                                @foreach (ItemDto item in day.Value.ItemDtos)
-                                {
-                                    <tr data-taskid="@item.Id">
-                                        <td> @item.Id </td>
-                                        <td> @item.Description </td>
-                                        <td> @item.Type </td>
-                                    </tr>
-                                }
+
+                            @foreach (ItemDto item in day.Value.ItemDtos)
+                            {
+                                <tr data-taskid="@item.Id">
+                                    <td> @item.Description 
+                                        <input type="checkbox"/>
+                                    </td>
+                                </tr>
+                            }
+
                         </tbody>
                     </table>
                 </div>
