--- a/Tasks/Views/PlanWeek/_WeekItemsTable.cshtml
+++ b/Tasks/Views/PlanWeek/_WeekItemsTable.cshtml
@@ -7,7 +7,7 @@
     <h1>In Week Items</h1>
 </div>
 <div class="plan">
-    @foreach (KeyValuePair<DayOfWeek, ItemListDto> day in Model.inWeekItemsList.dayItems)
+    @foreach (KeyValuePair<DayOfWeek, ItemListDto> day in Model.InWeekItemsListDto.dayItems)
     {
         <div class="day card">
             <h1>@day.Key.ToString()</h1>
