--- a/Tasks/Views/Shared/_Layout.cshtml
+++ b/Tasks/Views/Shared/_Layout.cshtml
@@ -33,16 +33,6 @@
                 <div class="nav-content">
                     @Html.Partial("_Menu")
                 </div>
-                <div class="nav-tabs">
-                    <ul>
-                        <li><div class="rotate">opt6</div></li>
-                        <li><div class="rotate">opt5</div></li>
-                        <li><div class="rotate">opt4</div></li>
-                        <li><div class="rotate">opt3</div></li>
-                        <li><div class="rotate">opt2</div></li>
-                        <li><div class="rotate">opt1</div></li>
-                    </ul>
-                </div>
             </div>            
 
         </nav>
@@ -56,28 +46,9 @@
         <aside>
 
             <div class="aside-container">
-
-                <div class="aside-tabs">
-                    <ul>
-                        <li><div class="rotate">tab6</div></li>
-                        <li><div class="rotate">tab5</div></li>
-                        <li><div class="rotate">tab4</div></li>
-                        <li><div class="rotate">tab3</div></li>
-                        <li><div class="rotate">tab2</div></li>
-                        <li class="active"><div class="rotate">tab1</div></li>
-                    </ul>
-                </div>
-
-                <div class="aside-content">
-                    <h2>Tool bar</h2>
-                    <p>
-                        This is where the tools will be kept.
-                        You can drag from here and place in centre
-                    </p>
-                </div>
-
+                @{ Html.RenderAction("Aside"); }
             </div>
-
+                
         </aside>
         
         <footer>
