--- a/Tasks/Views/Shared/_Aside.cshtml
+++ b/Tasks/Views/Shared/_Aside.cshtml
@@ -6,7 +6,7 @@
     
 <ul>
     @{
-        var orderedTabs = Model.TabsList
+        var orderedTabs = Model.VisibleTabsList
             .OrderBy(x => x.OrderNumber)
             .Reverse() //Reverse as tabs are reversed using css
             .ToList();
@@ -21,9 +21,5 @@
 </div>
 
 <div class="aside-content">
-    <h2>Tool bar</h2>
-    <p>
-        This is where the tools will be kept.
-        You can drag from here and place in centre
-    </p>
+    @{ Html.RenderAction("GetDefaultAsideContent"); }
 </div>
