--- a/Tasks/Views/Tasks/_AddTask.cshtml
+++ b/Tasks/Views/Tasks/_AddTask.cshtml
@@ -1,14 +1,9 @@
 ﻿@model Tasks.ViewModels.Tasks.TaskEditViewModel
 
-<div class="modal" id="addTaskModal">
-    
-            
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Add a task</h4>
-    </div>
+<div id="addTaskModal">
 
-    <div class="modal-body">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h4 class="modal-title">Add a task</h4>
 
         @using (Html.BeginForm("Create", "Tasks", FormMethod.Post, new {id = "addTaskForm"}))
         {
@@ -50,11 +45,5 @@
 
             </div>
         }
-
-    </div>
-
-    <div class="modal-footer">
-        <button id="btnAddTask" type="submit" value="Create" class="btn btn-default">Add</button>
-    </div>
-
+    <button id="btnAddTask" type="submit" value="Create" class="btn btn-default">Add</button>
 </div>
