--- a/Tasks/Views/Tasks/_AddTask.cshtml
+++ b/Tasks/Views/Tasks/_AddTask.cshtml
@@ -1,28 +1,33 @@
-﻿@model Tasks.ViewModels.Tasks.TaskEditViewModel
+﻿@using System.Web.Mvc.Html
+@using Tasks.Models.DomainModels
+@model Tasks.ViewModels.Tasks.TaskEditViewModel
+
 
 <div id="addTaskModal">
-
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    
     <h4 class="modal-title">Add a task</h4>
 
         @using (Html.BeginForm("Create", "Tasks", FormMethod.Post, new {id = "addTaskForm"}))
         {
             @Html.AntiForgeryToken()
-            <div class="form-group">
+    
 
-                @Html.LabelFor(model => model.Description, htmlAttributes: new {@class = "control-label"})
-                @Html.TextBoxFor(model => model.Description, new {@class = "form-control", PlaceHolder = "Task description"})
+        <h3>Description</h3>
+        @Html.TextBoxFor(model => model.Description, new { @class = "form-control", PlaceHolder = "Task description" })
 
-                <label>Priority</label>
-                @Html.TextBoxFor(model => model.PriorityId, new {@class = "form-control"})
+        <h3>Priority</h3>
+        @Html.DropDownListFor(model => model.PriorityId, Model.PriorityDropDownItems, new { id = "priority", name = "priority" })
 
-                <label>Timeframe Window</label>
+        <h3>Timeframe Window</h3>
+        <label for='timeFrame-day'>Day</label>
+        @Html.RadioButtonFor(m => m.TimeFrameId, 1, new { id = "timeFrame-day", name = "Window" })
+        <label for='timeFrame-week'>Week</label>
+        @Html.RadioButtonFor(m => m.TimeFrameId, 2, new { id = "timeFrame-week", name = "Window" })
+        <label for='timeFrame-wmonth'>Month</label>
+        @Html.RadioButtonFor(m => m.TimeFrameId, 3, new { id = "timeFrame-month", name = "Window" })
 
-                <label>Expected to be done by</label>
-                @Html.TextBoxFor(model => model.DateTime, new {@class = "form-control"})
-                
-
-            </div>
+        <h3>Timeframe Window</h3>
+    
         }
     <button id="btnAddTask" type="submit" value="Create" class="btn btn-default">Add</button>
 </div>
